<resources>
    <string name="app_name">LabAttendanceSystem</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Not a valid password</string>
    <string name="invalid_room_number">Not a valid room number</string>
    <string name="login_failed">"Login failed"</string>
    <string name="incorrect_username_or_password">Incorrect username or password.</string>
    <string name="network_request_timeout_error">Request timeout. Please check your network and retry.</string>
    <string name="user_is_not_lab_error">Only lab accounts are allowed login this check-in app.</string>
    <string name="invalid_lab_room_number_error">Invalid lab room number</string>
    <string name="unknown_login_error">Unknown error occurred during login. Please check your network and retry.</string>
    <string name="prompt_room_no">Room No.</string>
    <string name="group_course_tag">[%1$s] %2$s %3$s</string>
    <string name="time_range">%1$s~%2$s</string>
    <string name="session_detail_title">[%1$s] %2$s: %3$s</string>
    <string name="no_session_detail_title">No Session Selected</string>
    <string name="students">Students</string>
    <string name="teaching_assistants">TAs</string>
    <string name="username">Username</string>
    <string name="number_acronym">No.</string>
    <string name="name">Name</string>
    <string name="seat">Seat</string>
    <string name="ok">OK</string>
    <string name="empty_cell">-</string>
    <string name="attended_mark">✅</string>
    <string name="absent_mark">❌</string>
    <string name="no_active_sessions">No Active Sessions</string>
    <string name="loading_active_sessions">Loading Active Sessions</string>
    <string name="action_logout">logout</string>
    <string name="action_sync">sync</string>
    <string name="logout_warning">To logout the system, please enter the password first.\n(WARNING: the app will be closed after logout.)</string>
</resources>